test/preprocessor/invalid/version-es.glsl
#version 300 core // Mandatory 'es' profile
