test/preprocessor/invalid/version-es.glsl.err.ref
Error in preprocessor/invalid/version-es.glsl(1, 13): Profile must be 'es' for GLSL version 300
